<resources>
    <string name="app_name">Flickr</string>
    <string name="action_settings">Settings</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="network_error">Network Error</string>
    <string name="retry_button_action">Retry</string>
    <string name="item_post_by">By</string>
    <string name="item_post_from">from</string>
    <string name="post_item_contact">CONTACT</string>
    <string name="ok">OK</string>
    <string name="photo_permissions_not_granted">Permissions for saving Photo were not granted</string>
    <string name="photo_permissions_granted">Photo permissions were granted</string>
    <string name="tag_hint">Tag Filter</string>
    <string name="search">SEARCH</string>
    <string name="author">Author:</string>
    <string name="date_published">Date published:</string>
    <string name="date_taken">Date taken:</string>
    <string name="sort">Sort</string>
    <string name="publish_date">Publish Date</string>
    <string name="taken_date">Taken Date</string>
</resources>
